# dsqueez

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dsqueez.cpp  dsqueez.h  jni_bridge.cpp  jpeg_pipeline.cpp  jpeg_pipeline.h  lanczos.cpp  lanczos.h
app/src/main/jniLibs/: .gitkeep
app/src/main/kotlin/app/dsqueez/: DsqueezApp.kt  MainActivity.kt
app/src/main/kotlin/app/dsqueez/nativebridge/: Resampler.kt  Vips.kt
app/src/main/kotlin/app/dsqueez/photo/: MediaStoreSaver.kt  PhotoMetadata.kt  PhotoSource.kt  Pipeline.kt
app/src/main/kotlin/app/dsqueez/settings/: UserPrefs.kt
app/src/main/kotlin/app/dsqueez/share/: ShareIntent.kt
app/src/main/kotlin/app/dsqueez/ui/: DsqueezApp.kt
app/src/main/kotlin/app/dsqueez/ui/anim/: DesqueezeStretch.kt
app/src/main/kotlin/app/dsqueez/ui/components/: HairlineProgress.kt  MetadataStrip.kt  PhotoFrame.kt  PrimaryButton.kt  RatioControl.kt  SegmentedControl.kt
app/src/main/kotlin/app/dsqueez/ui/screens/: BatchScreen.kt  EditScreen.kt  EmptyScreen.kt  OptionsSheet.kt
app/src/main/kotlin/app/dsqueez/ui/theme/: Color.kt  DsqueezTheme.kt  Haptics.kt  Motion.kt  Spacing.kt  Type.kt
app/src/main/res/drawable/: ic_close.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_lens_glyph.xml  ic_options.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
test/: dsq_test.cpp
